# DrumsLed-Embedded-App

./: .gitignore  README.md
MasterProject/: CMakeLists.txt  main.cpp
MasterProject/animation/: animation.cpp  animation.h  animationManager.cpp  animationManager.h  fade.cpp  fade.h  simpleColor.cpp  simpleColor.h
MasterProject/api/terminal/: terminal.cpp  terminal.h
MasterProject/api/time/: chronoMs.cpp  chronoMs.h  periodicCallsMs.cpp  periodicCallsMs.h  timeMs.cpp  timeMs.h
MasterProject/api/udp/: udp.cpp  udp.h  udpPacket.cpp  udpPacket.h
MasterProject/led/: colorOrder.cpp  colorOrder.h  ledManager.cpp  ledManager.h  rgbColor.cpp  rgbColor.h  rgbLed.cpp  rgbLed.h
MasterProject/maths/coeff/: coeff.cpp  coeff.h
MasterProject/maths/matrix/: matrix.cpp  matrix.h
MasterProject/micro/: coeff.cpp  coeff.h  impact.h  impactsManager.cpp  impactsManager.h  learning.cpp  learning.h  micro.cpp  micro.h  microManager.cpp  microManager.h
MasterProject/micro/learning/: impact.cpp  impact.h  impactsManager.cpp  impactsManager.h  learning.cpp  learning.h  record.cpp  record.h  recordSlot.cpp  recordSlot.h
MasterProject/modules/: module.cpp  module.h  moduleManager.cpp  moduleManager.h
MasterProject/network/client/: client.cpp  client.h  ipv4.cpp  ipv4.h  macAddr.cpp  macAddr.h
MasterProject/network/udp/: udp.cpp  udp.h  udpPacket.cpp  udpPacket.h
MasterProject/network/udpParser/: udpParser.cpp  udpParser.h
MasterProject/session/: session.cpp  session.h
MasterProject/udpParser/: udpParser.cpp  udpParser.h
SlaveProjects/: README.md
SlaveProjects/DrumKit/: platformio.ini
SlaveProjects/DrumKit/src/: main.cpp
src/: main.cpp
